--- a/Content/main.html
+++ b/Content/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,20 @@
     <link rel="stylesheet" href="../Style/main_style.css">
     <title>Car</title>
 </head>
+
 <body>
-    <canvas class="container" id="container">
+    <canvas class="carCanvas" id="container">
     </canvas>
-    <script src="../Script/Sensor.js"></script>
+    <canvas class="netCanvas" id="netCanvas">
+    </canvas>
     <script src="../Script/auxi.js"></script>
+    <script src="../Script/Visualizer.js"></script>
+    <script src="../Script/Neuron.js"></script>
+    <script src="../Script/Sensor.js"></script>
     <script src="../Script/Road.js"></script>
     <script src="../Script/Control.js"></script>
     <script src="../Script/car.js"></script>
     <script src="../Script/main.js"></script>
 </body>
+
 </html>
