--- a/Content/main.html
+++ b/Content/main.html
@@ -12,6 +12,14 @@
 <body>
     <canvas class="carCanvas" id="container">
     </canvas>
+    <div class="verticalButtons">
+        <button onclick="save()">
+            Save
+        </button>
+        <button onclick="discard()">
+            Discard
+        </button>
+    </div>
     <canvas class="netCanvas" id="netCanvas">
     </canvas>
     <script src="../Script/auxi.js"></script>
